--- a/natural-language-processing-and-chatterbots.html
+++ b/natural-language-processing-and-chatterbots.html
@@ -18,14 +18,14 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Natural Language Processing and Chatterbots <em>by Adair Grant</a></h1>
+						<h1><a href="index.html" id="logo">Natural Language Processing and Chatterbots <em>by Adair Grant <em> </a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">IT Technologies</a>
+									<a href="#">IT Technologies</a> 
 									<ul>
 										<li><a href="autonomous-vehicles.html">Autonomous Vehicles</a></li>
 										<li><a href="clouds-servers-services.html">Clouds, servers and services</a></li>
