--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="index.html" class="logo">
-										<img src="Logo-Extra.jpg" alt="Logo-Extra">
+										<img src="images/Logo-Extra.jpg" alt="Logo-Extra">
 									</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
