--- a/generic.html
+++ b/generic.html
@@ -37,7 +37,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<H1 style="background-color:#0399D6;">Generic</H1>
+										<H1 style="color:#0399D6;">Generic</H1>
 									</header>
 
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
