--- a/generic.html
+++ b/generic.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Generic - Editorial by HTML5 UP</title>
@@ -80,11 +75,11 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="Donation.html">Charties</a></li>
+										<li><a href="AboutUs.html">About Us</a></li>
+										<li><a href="OurTeam.html">Our team</a></li>
+										<li><a href="Login.html">Login</a></li>
+										<li><a href="SignUp.html">Sign-Up</a></li>
 									</ul>
 								</nav>
 
