Initial Change Login Page
Just a few things (texts) not yet the username password etc

--- a/Login.html
+++ b/Login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Generic - Editorial by HTML5 UP</title>
+		<title>Login</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,8 +32,9 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<H1 style="color:#0399D6;">Generic</H1>
-									</header>
+										<H1 style="color:#0399D6;">Hi, Welcome to the Login Page</H1>
+									</header>				
+							
 
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 
