--- a/SignUp.html
+++ b/SignUp.html
@@ -78,13 +78,13 @@
 
 									<br>
 									<p>
-									ALready have an account? Sign in here:<a href="#">Here</a>
+									ALready have an account? Sign login here:<a href="#">Here</a>
 									</p>
 
 
-									<span class="image main"><img src="images/bushfirekoala.png" alt="" /></span><br>
+									<span class="image main"><img src="images/Salvos.jpg" alt="" /></span><br>
 									<p>
-										Koala in Bushfire - Australia,2020
+										Salvation army - Australia,2020
 									</p>
 								</section>
 
