--- a/OurTeam.html
+++ b/OurTeam.html
@@ -38,6 +38,8 @@
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 
 									<section class="col-6 col-12-narrower">
+						<div class="row">
+							<section class="col-6 col-12-narrower">
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/nathan.jpg" alt="" /></a>
 									<div class="inner">
