--- a/OurTeam.html
+++ b/OurTeam.html
@@ -32,7 +32,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<H1 style="color:#0399D6;">Generic</H1>
+										<H1 style="color:#0399D6;">Our Team</H1>
 									</header>
 
 									<section class="col-6 col-12-narrower">
