--- a/UnderConstruction.html
+++ b/UnderConstruction.html
@@ -37,6 +37,10 @@
 									
 									<span class="image object">
 										<img src="images/underconstruction2550.jpg" alt="" style="width:1200px;height:550px;">
+									
+									<ul class="actions">
+											<li><a href="/index.html" class="button big">Back to Home Page</a></li>
+										</ul>
 
 								</section>
 
