--- a/index.html
+++ b/index.html
@@ -37,17 +37,15 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
-											by HTML5 UP</h1>
-											<p>A free and fully responsive site template</p>
+											<h1>Welcome!<br />
+											To Choice Charities</h1>
+											<p>Where we help you, help make a difference.</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
-										</ul>
+										<p>We are a small not for profit organisation with a big dream. We want to provide a platform that will enable users to find a wide variety of charity works, conservation efforts, community projects or other crowd funded projects from all across Australia.</p>
+										<p>Donating to charity shouldn't be difficult or time consuming, and thats why we made Choice Charities.</p>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/Home1.jpg" alt="" />
 									</span>
 								</section>
 
