--- a/UnderConstruction.html
+++ b/UnderConstruction.html
@@ -39,7 +39,7 @@
 										<img src="images/underconstruction2550.jpg" alt="" style="width:1200px;height:550px;">
 									
 									<ul class="actions">
-											<li><a href="/index.html" class="button big">Back to Home Page</a></li>
+											<li><a href="/The_IT_World/index.html" class="button big">Back to Home Page</a></li>
 										</ul>
 
 								</section>
