--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<p>Donating to charity shouldn't be difficult or time consuming, and thats why we made Choice Charities.</p>
 									</div>
 									<span class="image object">
-										<img src="images/Home1.jpg" alt="" />
+										<img src="images/Home1.png" alt="" />
 									</span>
 								</section>
 
