--- a/index.html
+++ b/index.html
@@ -52,35 +52,47 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Erat lacinia</h2>
+										<h2>Through our website you can...</h2>
 									</header>
 									<div class="features">
 										<article>
 											<span class="icon fa-gem"></span>
 											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Explore nation wide!</h3>
+												<p>Throught our digital interactive map of australia, you can explore charities and projects from across the nation and help those in areas close to home or thousands of kilometers away./p>
+												<ul class="actions">
+											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
+										</ul>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-paper-plane"></span>
 											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Explore nation wide!</h3>
+												<p>Throught our digital interactive map of australia, you can explore charities and projects from across the nation and help those in areas close to home or thousands of kilometers away./p>
+												<ul class="actions">
+											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
+										</ul>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Explore nation wide!</h3>
+												<p>Throught our digital interactive map of australia, you can explore charities and projects from across the nation and help those in areas close to home or thousands of kilometers away./p>
+												<ul class="actions">
+											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
+										</ul>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Explore nation wide!</h3>
+												<p>Throught our digital interactive map of australia, you can explore charities and projects from across the nation and help those in areas close to home or thousands of kilometers away./p>
+												<ul class="actions">
+											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
+										</ul>
 											</div>
 										</article>
 									</div>
