--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 										<article>
 											<span class="icon solid fa-paper-plane"></span>
 											<div class="content">
-												<h3>Explore nation wide!</h3>
-												<p>Throught our digital interactive map of australia, you can explore charities and projects from across the nation and help those in areas close to home or thousands of kilometers away./p>
+												<h3>Browse a number of charities!</h3>
+												<p>Our charity works cover a wide spectrum of categories such as education, humanitarian, environmental, animal welfare and much more./p>
 												<ul class="actions">
 											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
 										</ul>
@@ -88,8 +88,8 @@
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3>Explore nation wide!</h3>
-												<p>Throught our digital interactive map of australia, you can explore charities and projects from across the nation and help those in areas close to home or thousands of kilometers away./p>
+												<h3>Pay Your way!</h3>
+												<p>Make your donation through a variety of of different payment methods with complete confidence that your money will be handled quickly and with /p>
 												<ul class="actions">
 											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
 										</ul>
