--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 											<span class="icon solid fa-paper-plane"></span>
 											<div class="content">
 												<h3>Explore nation wide!</h3>
-												<p>Throught our digital interactive map of australia, you can explore charities and projects from across the nation and help those in areas close to home or thousands of kilometers away./p>
+												<p>Throught our digital interactive map of australia, you can explore charities and projects from across the nation and help those in areas close to home or thousands of kilometers away.</p>
 												<ul class="actions">
 											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
 										</ul>
@@ -69,7 +69,7 @@
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
 												<h3>Browse a number of charities!</h3>
-												<p>Our charity works cover a wide spectrum of categories such as education, humanitarian, environmental, animal welfare and much more./p>
+												<p>Our charity works cover a wide spectrum of categories such as education, humanitarian, environmental, animal welfare and much more.</p>
 												<ul class="actions">
 											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
 										</ul>
@@ -79,7 +79,7 @@
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
 												<h3>Donate with confidence!</h3>
-												<p>All the charities on our site have been analysed and interviewed to make sure that all funding they receive will actually go towards helping their cause./p>
+												<p>All the charities on our site have been analysed and interviewed to make sure that all funding they receive will actually go towards helping their cause.</p>
 												<ul class="actions">
 											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
 										</ul>
@@ -89,7 +89,7 @@
 											<span class="icon fa-gem"></span>
 											<div class="content">
 												<h3>Pay Your way!</h3>
-												<p>Make your donation through a variety of of different payment methods with complete confidence that your money will be handled quickly and with /p>
+												<p>Make your donation through a variety of of different payment methods with complete confidence that your money will be handled quickly and with.</p>
 												<ul class="actions">
 											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
 										</ul>
