--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 												<h3>Donate with confidence!</h3>
 												<p>All the charities on our site have been analysed and interviewed to make sure that all funding they receive will actually go towards helping their cause.</p>
 												<ul class="actions">
-											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
+											<li><a href="/The_IT_World/AboutUs.html" class="button big">See More</a></li>
 										</ul>
 											</div>
 										</article>
@@ -91,7 +91,7 @@
 												<h3>Pay Your way!</h3>
 												<p>Make your donation through a variety of of different payment methods with complete confidence that your money will be handled quickly and with.</p>
 												<ul class="actions">
-											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
+											<li><a href="/The_IT_World/Payment.html" class="button big">See More</a></li>
 										</ul>
 											</div>
 										</article>
