--- a/index.html
+++ b/index.html
@@ -101,31 +101,31 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ipsum sed dolor</h2>
+										<h2>More information...</h2>
 									</header>
 									<div class="posts">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<h3>About Us</h3>
+											<p>Find out more about how we came up with our business, and what drove us to make it real. </p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="/The_IT_World/AboutUs.html" class="button">Learn More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<h3>Our Team</h3>
+											<p>Get to know a bit more about our amazing team here at Choice Charities. Who we are, where we're from and why we do what we do.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="The_IT_World/OurTeam.html" class="button">Learn More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<h3>Education</h3>
+											<p>Find out what goes into us adding a new charitys to our site. How we chose them, and how we make sure they are 100% worth your donation.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">Learn More</a></li>
 											</ul>
 										</article>
 									</div>
