--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 											<h3>Our Team</h3>
 											<p>Get to know a bit more about our amazing team here at Choice Charities. Who we are, where we're from and why we do what we do.</p>
 											<ul class="actions">
-												<li><a href="The_IT_World/OurTeam.html" class="button">Learn More</a></li>
+												<li><a href="/The_IT_World/OurTeam.html" class="button">Learn More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -125,7 +125,7 @@
 											<h3>Education</h3>
 											<p>Find out what goes into us adding a new charitys to our site. How we chose them, and how we make sure they are 100% worth your donation.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">Learn More</a></li>
+												<li><a href="/The_IT_World/Education.html" class="button">Learn More</a></li>
 											</ul>
 										</article>
 									</div>
