--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/Home2.jpg" alt="" /></a>
 											<h3>About Us</h3>
 											<p>Find out more about how we came up with our business, and what drove us to make it real. </p>
 											<ul class="actions">
@@ -113,7 +113,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/Home3.jpg" alt="" /></a>
 											<h3>Our Team</h3>
 											<p>Get to know a bit more about our amazing team here at Choice Charities. Who we are, where we're from and why we do what we do.</p>
 											<ul class="actions">
@@ -121,7 +121,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/Home4.jpg" alt="" /></a>
 											<h3>Education</h3>
 											<p>Find out what goes into us adding a new charitys to our site. How we chose them, and how we make sure they are 100% worth your donation.</p>
 											<ul class="actions">
