--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="Donation.html">Charties</a></li>
+										<li><a href="Donation.html">Charities</a></li>
 										<li><a href="AboutUs.html">About Us</a></li>
 										<li><a href="OurTeam.html">Our team</a></li>
 										<li><a href="Login.html">Login</a></li>
