--- a/generic.html
+++ b/generic.html
@@ -97,6 +97,10 @@
 										Melbourne VIC 3000</li>
 									</ul>
 								</section>
+							<ul class="actions">
+								<li><a href="/The_IT_World/ReportPage.html" class="button">Report Page</a></li>
+							</ul>
+							
 
 							<!-- Footer -->
 								<footer id="footer">
