--- a/Login.html
+++ b/Login.html
@@ -87,7 +87,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="Donation.html">Charties</a></li>
+										<li><a href="Donation.html">Charities</a></li>
 										<li><a href="AboutUs.html">About Us</a></li>
 										<li><a href="OurTeam.html">Our team</a></li>
 										<li><a href="Login.html">Login</a></li>
@@ -109,6 +109,10 @@
 										Melbourne VIC 3000</li>
 									</ul>
 								</section>
+							<ul class="actions">
+								<li><a href="/The_IT_World/ReportPage.html" class="button">Report Page</a></li>
+							</ul>
+							
 
 							<!-- Footer -->
 								<footer id="footer">
