--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 										<img src="images/Logo-Extra.jpg" alt="Logo-Extra">
 									</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="/The_IT_World/UnderConstruction.html" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="/The_IT_World/UnderConstruction.html" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="/The_IT_World/UnderConstruction.html" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
+										<li><a href="/The_IT_World/UnderConstruction.html" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 								</header>
 
@@ -105,7 +105,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/Home2.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/Home2.png" alt="" /></a>
 											<h3>About Us</h3>
 											<p>Find out more about how we came up with our business, and what drove us to make it real. </p>
 											<ul class="actions">
@@ -121,7 +121,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Home4.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/Home4.webp" alt="" /></a>
 											<h3>Education</h3>
 											<p>Find out what goes into us adding a new charitys to our site. How we chose them, and how we make sure they are 100% worth your donation.</p>
 											<ul class="actions">
