--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Home3.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/Home3.webp" alt="" /></a>
 											<h3>Our Team</h3>
 											<p>Get to know a bit more about our amazing team here at Choice Charities. Who we are, where we're from and why we do what we do.</p>
 											<ul class="actions">
