Tools and Techs, Plans and Progress

--- a/ReportPage.html
+++ b/ReportPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Generic - Editorial by HTML5 UP</title>
+		<title>Report Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,7 +32,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<H1 style="color:#0399D6;">Generic</H1>
+										<H1 style="color:#0399D6;">Report</H1>
 									</header>
 
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
@@ -43,16 +43,142 @@
 
 									<hr class="major" />
 
-									<h2>Interdum sed dapibus</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
+									<h2>Plans and Progress</h2>
+									<p><b>First of all,</b> let me introduce you all to my team called Team Choice Charities. 
+									   	We call it Choice Charities just simply because it is the name of our Project that we’re going to work on. 
+										As we know, everything that happened in life will remain as a story that can be told someday later. 
+										This writing will be about a story of my great team. 
+										The way we met each other will be the fun part of this little story of us. 
+										Due to the Covid-19 Pandemic, we need to study and work entirely from home even for me, I need to experience the very first time of university just from here, my home country, Indonesia. 
+										We need to work at our best despite the fact there is a pandemic striking. 
+										Therefore, all of us met just through video calls that we consider as meetings for more professional term. 
+										Dividing tasks, setting deadlines and helping each others will be the key to successfully turn the Project Idea into reality. 
+                                                                                <br>
+										<b>Enough Introduction,</b> now let’s move on to the project that we are going to work on which will become an “artifact”. 
+										At the beginning, each member come with different and broad range of ideas. 
+										After thinking and contemplating for sometimes, we finally decided to go with Nathan’s idea which is a website about charity programs in Australia. 
+										Basically, the functionality of the site will not have any huge difference with other existing sites. 
+										It will be able to distribute certain amount of money to those who are in need. 
+										As this is a charity website that aims for Australians, it will collect data to show the details of charities held all around Australia. 
+										Moreover, there will be some specific functions that will differentiate ours with existing ones and the first function is the ability to specifically track where the money donated goes to and what is it used for. 
+										In brief, you are in control of your money and it is assured that the money is used wisely. 
+										Transparency is the main thing we want to demonstrate in this project. 
+										We even planned to attach the map of Australia to clearly show where exactly every charity are held and we will put pins on the map as a mark for each charity. 
+										Another feature will be a thing we call the “Humble Bonus”, and this is about some certain amount of bonus you will get after participating in one or more charities. 
+										One of possible outcomes of this project is a connectivity between the charity world and the IT world because I really do believe if our project website becomes real, it will create a huge and great impact to humanity. 
+										It will help people to concretely practice how to be a humble person and unconsciously give hopes of life to others. 
+										There might be a chance that we will expand the website to support charities all over the world and not only in Australia – only time will tell.  
+										<br>
+										<b>“So far everything went really well.”</b>
+										The words that I would say about our progress. 
+										Most of the tasks that each of us has are in the same level with our skills so we do not really struggle with most parts of the assignment. 
+										One challenging part of this last assignment is the prototyping because we need to do it with Javascript(JS). 
+										A prototype is not just simply a website containing reports and hard coded things. 
+										It is something that capable to interact with user and do several specific functions. 
+										Hence, it is somehow will be the hardest part of this assignment – the reason why we call them as an “artifact”. 
+										Before creating the prototype, we need to be settled with all of the contents required in the specification so it is more likely to say that prototyping will be the last stage of the project. 
+										For now, we are still at the initial stage of the project which is the content fulfilling where each of us are doing our individual parts. 
+										Parts here mean the whole thing in the specification divided into equal pieces which each member works on according to what piece they have chosen. 
+										A way that we use to ease the part dividing is to place each member to the same role in A2 so that we do not get confused on picking each of our part. 
+										We also use a web template for this final project. 
+										Me myself has roles to work on the Tools and Technologies part and obviously in writing this Plan and Progress section. 
+										To be honest, it is a little bit challenging for me to write this up because I am not really good at writing. 
+										It is not a dead-end anyway because I could still try my best to construct this particular section. 
+										Moreover, the stage when we will really gather to do a task is the prototyping because I’m pretty sure it will need more effort than any part of this assignment.
+										<br>
+										<b>About Handing the Project to successors,</b> we need to completely firm with our idea and what really is the vision of this project. 
+										Successors’ roles will only simply continuing what we had done beforehand. 
+										If I will be one of the successors, I will definitely ask for what is the aim and vision of the project. 
+										A reason why I will ask this as early as possible is to respect the predecessors’ goal so they will be sure that their project is going to the right direction. 
+										Another thing I will ask is how they usually progress with the project. 
+										Knowing how they work will lead the successors to imitate the efficiency they had before. 
+										Last thing will be what are the tools and technologies they used. 
+										By using the same tools and technologies, successors will get the same capabilities with predecessors or even more to complete the project. 
+										However, they will still need to learn at initial and get used to the tools in order to enhance their skills. 
+										<br>
+										<b>End of words,</b> the project has brought us to ups and downs. 
+										Even though we barely found any trouble or miscommunication, there might be some invisible downs that each teammate feels. 
+										One essential lesson we learn in this project is how to co-operate with team at our best. 
+										Real challenge such as the fact that a pandemic is in front of us and it is blocking us to directly meet each other can’t be resisted. 
+										Nevertheless, the big challenges will just make us even a better person because we will already have passed them at the end of this project. 
+										Lastly, I just want to say thank you to Team Choice Charities for being supportive, for being good and for being the best for us.
+										I hope this is not awkward because we all do know each team has their own story. </p>									
+									
 									<hr class="major" />
 
-									<h2>Magna etiam veroeros</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<h2>Tools and Technologies</h2>
+									<p>We all do know that to achieve goals there are sweats and tears behind them.
+									   	As well as a technology, it needs tools and some technology in order to make it happen. 
+									   	Tools and Technologies are more like the back-end of this Charity Website. 
+								           	Here are some tools and technologies we need:  
+									   	<br>
+										<strong>Tools:</strong> 
 
+										<b>1. GitHub/Visual Studio,</b><br>
+										We will be using GitHub or Visual Studio as these applications are compatible for team projects and what we are most familiar with. 
+										Moreover, these apps provide free local hosting service for working and updating the web while in the developing process.  
+										<br>
+										<b>2. Text Editor (Notepad ++, Atom.io, etc)</b><br>
+										This tool is very essential in the making of this project because editor is like the control panel of our website.
+										The code, page layout and functions are everything set in the text editor. 
+										In other words, without this tool we can’t edit the appearance and how our website works. 
+										<br>
+										<b>3. Open Source Template</b><br>
+										We are planning to use template for our website instead of creating it from scratch.
+										However, it is way easier to use templates because we already got the design, and it is only matter of changing the text inside it. Templates usually come with both HTML, CSS, and JavaScript in them.<br>
+										<b>(html5up.com/templated.co)<b>
+										<br>
+										<b>4. Bootstrap</b><br>
+										Bootstrap is to provide functions in our website. 
+										In order to make our website more interactive and arranged this tool is very essential.
+										By collaborating it with the text editor, we will get maximum function of this tool called Bootstrap.<br>
+										<b>(bootstrap4.com)</b>
+										<br>
+										<b>5. JavaScript</b><br>
+										This tool is actually part of the Bootstrap tool above.
+										One of Bootstrap’s components to be exact and it supports bootstrap to perform its best. 
+										<br>
+										<br>
+										<strong>Technologies:</strong>
+										<b>1. Website Hosting Service (GitHub)</b><br>
+										After all is done and we are sure that the website is adequately developed, the next step is to think about using a Web Hosting Service.
+										A service that allows us to release the website we made to public so that everybody all around the world can see and surf in our web.   
+										<br>
+										<b>2. Clouds (GitHub)<b><br>
+										The Cloud technology held a huge role in this web making since we are using GitHub for our project. 
+										Pushing and Pulling works to the GitHub repository in GitHub app is one example of the Cloud technology.  
+										<br>
+										<b>3. Planner (Trello) </b><br>
+										We use Trello to keep up with each of our work.
+										This is to keep the group well-organized because each teammate can track their own corresponding work and see how they are progressing.
+										<br>
+										<br>
+										<b>The answer is no,</b> there will not be any licensed product or tools that we are going to use for the semi-functional prototype.
+										However, there are 3 main things we are going to manipulate:
+										<br>
+										<b>1. HTML (Hypertext Markup Language)</b><br>
+										A programming language that usually used in web development.
+										It has the functionality to construct the website contents. 
+										<br>
+										<b>2. JavaScript</b><br>
+										A programming language that we use to control the behaviour of the site.
+										In other words, it is the breath of the website because it creates interactions between the website and users. 
+										<br>
+										<b>3. CSS (Cascading Style Sheets)</b><br>
+										An element that we will manipulate for the page layout styling.
+										It has the functionalities to arrange things in our website (more to the design matters) and to make the site looks pretty.
+										<br>
+										There is no additional hardware needed to actually construct the Website other than our personal computer because we will majorly use online services provided by the free hosting companies (GitHub).
+										Our prior experience with the tools listed here before was decently great.
+										It is due to some of us are still new to this technology and also a first semester student.
+										In this assignment, I think we will have a better understanding because we already get more familiar with GitHub and stuffs.
+										<br>
+										<br>
+										<strong>References:</strong>
+										W3schools.com. 2020. CSS Tutorial. [online] Available at: <https://www.w3schools.com/css/> [Accessed 5 October 2020].<br>
+										W3schools.com. 2020. HTML Tutorial. [online] Available at: <https://www.w3schools.com/html/default.asp> [Accessed 5 October 2020].<br>
+										W3schools.com. 2020. Javascript Tutorial. [online] Available at: <https://www.w3schools.com/js/> [Accessed 5 October 2020]. </p>											
+									
 									<hr class="major" />
 
 									<h2>Lorem aliquam bibendum</h2>
