Tools and Techs, Plan and Progress fix(1)

--- a/ReportPage.html
+++ b/ReportPage.html
@@ -112,7 +112,7 @@
 									   	Tools and Technologies are more like the back-end of this Charity Website. 
 								           	Here are some tools and technologies we need:  
 									   	<br>
-										<strong>Tools:</strong> 
+										<strong>Tools:</strong><br>
 
 										<b>1. GitHub/Visual Studio,</b><br>
 										We will be using GitHub or Visual Studio as these applications are compatible for team projects and what we are most familiar with. 
@@ -139,7 +139,7 @@
 										One of Bootstrap’s components to be exact and it supports bootstrap to perform its best. 
 										<br>
 										<br>
-										<strong>Technologies:</strong>
+										<strong>Technologies:</strong><br>
 										<b>1. Website Hosting Service (GitHub)</b><br>
 										After all is done and we are sure that the website is adequately developed, the next step is to think about using a Web Hosting Service.
 										A service that allows us to release the website we made to public so that everybody all around the world can see and surf in our web.   
