--- a/SignUp.html
+++ b/SignUp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Sign Up </title>
+		<title>Choice Charities</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,11 +21,10 @@
 										<img src="images/Logo-Extra.jpg" alt="Logo-Extra">
 									</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="/The_IT_World/UnderConstruction.html" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="/The_IT_World/UnderConstruction.html" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="/The_IT_World/UnderConstruction.html" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
+										<li><a href="/The_IT_World/UnderConstruction.html" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 								</header>
 
@@ -36,8 +35,8 @@
 									</header><br>
 
 									<ul class="actions">
-										<li><a href="#" class="button">Sign up with Facebook</a></li><br\><br\>
-										<li><a href="#" class="button">Sign up with Google</a></li>
+										<li><a href="/The_IT_World/UnderConstruction.html" class="button">Sign up with Facebook</a></li><br\><br\>
+										<li><a href="/The_IT_World/UnderConstruction.html" class="button">Sign up with Google</a></li>
 									</ul>
 									<br>
 									<p>
@@ -73,7 +72,7 @@
 
 
 									<ul class="actions">
-										<li><a href="#" class="button primary">Create Account</a></li><br\><br\>
+										<li><a href="/The_IT_World/UnderConstruction.html" class="button primary">Create Account</a></li><br\><br\>
 									</ul>
 
 									<br>
