Tools and Techs, Plan and Progress fix(2)

--- a/ReportPage.html
+++ b/ReportPage.html
@@ -174,7 +174,7 @@
 										In this assignment, I think we will have a better understanding because we already get more familiar with GitHub and stuffs.
 										<br>
 										<br>
-										<strong>References:</strong>
+										<strong>References:</strong><br>
 										W3schools.com. 2020. CSS Tutorial. [online] Available at: <https://www.w3schools.com/css/> [Accessed 5 October 2020].<br>
 										W3schools.com. 2020. HTML Tutorial. [online] Available at: <https://www.w3schools.com/html/default.asp> [Accessed 5 October 2020].<br>
 										W3schools.com. 2020. Javascript Tutorial. [online] Available at: <https://www.w3schools.com/js/> [Accessed 5 October 2020]. </p>											
