Tools and Techs, Plan and Progress fix(3)
again sorry nate for so many fixings

--- a/ReportPage.html
+++ b/ReportPage.html
@@ -126,7 +126,7 @@
 										<b>3. Open Source Template</b><br>
 										We are planning to use template for our website instead of creating it from scratch.
 										However, it is way easier to use templates because we already got the design, and it is only matter of changing the text inside it. Templates usually come with both HTML, CSS, and JavaScript in them.<br>
-										<b>(html5up.com/templated.co)<b>
+										<b>(html5up.com/templated.co)</b>
 										<br>
 										<b>4. Bootstrap</b><br>
 										Bootstrap is to provide functions in our website. 
