another small fix

--- a/ReportPage.html
+++ b/ReportPage.html
@@ -144,7 +144,7 @@
 										After all is done and we are sure that the website is adequately developed, the next step is to think about using a Web Hosting Service.
 										A service that allows us to release the website we made to public so that everybody all around the world can see and surf in our web.   
 										<br>
-										<b>2. Clouds (GitHub)<b><br>
+										<b>2. Clouds (GitHub)</b><br>
 										The Cloud technology held a huge role in this web making since we are using GitHub for our project. 
 										Pushing and Pulling works to the GitHub repository in GitHub app is one example of the Cloud technology.  
 										<br>
