--- a/SignUp.html
+++ b/SignUp.html
@@ -77,7 +77,7 @@
 
 									<br>
 									<p>
-									Already have an account? login here:<a href="https://team-indecisive.github.io/The_IT_World/Login.html">Here</a>
+									Already have an account? login here <a href="https://team-indecisive.github.io/The_IT_World/Login.html">Here</a>
 									</p>
 
 
