--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
 										<img src="images/Home1.png" alt="" />
 									</span>
 								</section>
+							
+							<!-- Section -->
+								<section>
+									<header class="major">
+										<h2>Ready to Donate?</h2>
+									</header>
+									<div class="features">
+										<article>
+											<div class="content">
+
+											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
+											</ul>
+											</div>
+										</article>
+									</div>
+								</section>
+							
 
 							<!-- Section -->
 								<section>
