--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										<article>
 											<div class="content">
 
-											<li><a href="/The_IT_World/Donation.html" class="button big">See More</a></li>
+											<li><a href="/The_IT_World/Donation.html" class="button big">Donate now! style="width:500px;height:250px;"</a></li>
 											</ul>
 											</div>
 										</article>
